fix data-list jump on hover

--- a/less/framework/modules/data-list.less
+++ b/less/framework/modules/data-list.less
@@ -8,22 +8,19 @@
     &:first-child a {
      border-top-color: transparent;
     }
-    &:last-child a {
-      border-bottom: none;
-    }
     a {
 	    display:block;
+      border: 1px solid transparent;
       border-top: 1px dotted #e0e0e0;
       padding: 0.3571em 0;
       &:hover {
         text-decoration:none;
         background-color: #F6F8ED;
         background-color: rgba(255, 245, 184, 0.15);
-        margin: 0 -0.87em 0 -0.85em;
-        padding: 0.3571em 0.8em;
+        margin: 0 -0.83333em 0 -0.83333em;
+        padding: 0.3571em 0.83333em;
         border-color: #E1D8A4;
         border-style: solid;
-        margin-bottom: -1px;
         .border-radius(4px);
         border-width: 1px 1px;
       }
