--- a/less/framework/modules/link-bucket.less
+++ b/less/framework/modules/link-bucket.less
@@ -14,13 +14,14 @@
     a { 
       display: block;
       padding: 0.7em 0 0.5em;
+      border:1px solid transparent;
       border-top: 1px dotted #E0E0E0;
 		    line-height: 135%;
       &:hover {
         background: #FFF5B8;
-        margin: 0 -0.8333333em -1px -0.8333333em;
+        margin: 0 -0.833em;
         padding: 0.7em 0.8333333em 0.5em;
-        border-width:0;
+        border:1px solid transparent;
         border-top: 1px solid desaturate(darken(#FFF5B8,10%),50%);
         border-bottom: 1px solid desaturate(darken(#FFF5B8,10%),50%);
         text-decoration:  none;
